Bug 481691 - Debugger plugin (GDB) ignores breakpoints
Summary: Debugger plugin (GDB) ignores breakpoints
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.08.5
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-22 18:25 UTC by Michael Alexsander
Modified: 2024-07-14 17:58 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Alexsander 2024-02-22 18:25:57 UTC
SUMMARY
When using the debugger plugin with GDB, it seems to ignore breakpoints set.


STEPS TO REPRODUCE
1. Set the debugger with GDB.
2. Set the breakpoints (doing this after doesn't change anything).
3. Start debugging.


OBSERVED RESULT
The program doesn't pause in places where it clearly reached a segment with a breakpoint.


EXPECTED RESULT
The program pausing when reaching a breakpoint.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  Fedora Kinoite 39 (using rpm-ostree)
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.115.0
Qt Version: 5.15.12
Comment 1 leo5t 2024-05-20 22:09:36 UTC
It happens the same on my computer

Operating System: Arch Linux 
KDE Plasma Version: 6.0.4
KDE Frameworks Version: 6.2.0
Qt Version: 6.7.0
Graphics Platform: X11
Comment 2 Bug Janitor Service 2024-07-12 23:31:32 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1540
Comment 3 Kåre Särs 2024-07-14 17:58:26 UTC
Git commit f9e98f71e28443c04ae3284a4e881196d4e241e2 by Kåre Särs, on behalf of Akseli Lahtinen.
Committed on 14/07/2024 at 17:58.
Pushed by sars into branch 'master'.

plugin_kategdp: When breakpoint mark changes, toggle breakpoint for it

Breakpoint marks were currently just visual, they did not actually do
anything when it came to toggling the breakpoints.

This makes sure whenever the document updates a breakpoint marker,
it's actually toggled. If debugger is running and you set markers to file `foo.cpp` then close the file,
and reopen it, Kate asks the debugger if the file has any breakpoints and if so, it will mark them back.

There is also a change for the toggle breakpoint keyboard shortcut, where
it toggles the breakpoint using the marker system, instead of having two 
competing systems.

M  +34   -9    addons/gdbplugin/plugin_kategdb.cpp
M  +3    -0    addons/gdbplugin/plugin_kategdb.h

https://invent.kde.org/utilities/kate/-/commit/f9e98f71e28443c04ae3284a4e881196d4e241e2